// product-service/proto/product/product.proto

syntax = "proto3";

package product;

// Product is a message for product
message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string picture = 5;
    bool status = 6;
}

// IndexProductRequest is a message for requesting all products
message IndexProductsRequest {}

// Response is a message for a response
message Response {
    Product product = 1;
    Error error = 2;
    repeated Product products = 3;
}

// Error is a message for errors
message Error {
    string code = 1;
    string message = 2;
}

// ProductService service
service ProductService {
    // Method to index all products
    rpc IndexProducts(IndexProductsRequest) returns (Response) {}

    // Method to show a product
    rpc ShowProduct(Product) returns (Response) {}

    // Method to store a new product
    rpc StoreProduct(Product) returns (Response) {}

    // Method to update a product's information
    rpc UpdateProduct(Product) returns (Response) {}

    // Method to delete a product
    rpc DestroyProduct(Product) returns (Response) {}
}